remove close tab button search and history